<resources>
    <string name="app_name">Abtester</string>
    <string name="startInfo">Spróbuj narysować prosty rysunek statku.\nMoże być podobny do tego:</string>
    <string name="startDrawingButton">Zacznij test</string>
    <string name="endTestButton">Zakończ test</string>
    <string name="notpressed">notpressed</string>
    <string name="timeSpace">Average space time:</string>
    <string name="handSpeed">Average hand speed:</string>
    <string name="linesCount">Lines count:</string>
    <string name="totalTime">Total time:</string>
    <string name="lineTime">Average time per line:</string>
    <string name="results">Results:</string>
    <string name="noValue">NONE</string>
    <string name="menuStartTest">Rozpocznij test</string>
    <string name="menuInstruction">Instrukcja</string>
    <string name="menuStatistics">Pokaż statystyki</string>
    <string name="menuClose">Zamknij</string>
    <string name="menuReturn">Wróć</string>
    <string name="menuTestExplanation">Podczas testu będą prezentowane układy 3 elementów. Zadaniem użytkownika będzie przerysowanie elementów w takim samym ułożeniu na następnym oknie. Aplikacja uwzględnia rozmiar oraz przesunięcie przerysowanych elementów. Czas rysowania jest liczony od momentu rozpoczęcia pierwszej linii do momentu zakończenia rysowania ostatniej linii. Czas pomiędzy zakończeniem ostatniej linii, a naciśnięciem przycisku "ZAKOŃCZ TEST" nie jest uwzględniany. </string>
    <string name="pretestClause">Upewnij się czy zapoznałeś się z instrukcją do testu, jeśli rozumiesz zasady testu kontynuuj</string>
    <string name="menuContinue">Kontynuuj</string>
    <string name="timer">0</string>
    <string name="timerInfo">Test rozpocznie się za:</string>
    <string name="tableNumber">Nr.</string>
    <string name="tableNumber1">1</string>
    <string name="tableNumber2">2</string>
    <string name="tableNumber3">3</string>
    <string name="tableNumber4">4</string>
    <string name="tableNumber5">5</string>
    <string name="tableNumberX">x̄</string>
    <string name="tableParam1">Liczba linii</string>
    <string name="tableParam2">Prędkość\nrysowania\nlinii</string>
    <string name="tableParam3">Czas\nrysowania\npojedynczej\nlinii</string>
    <string name="tableParam4">Średni czas\npomiędzy\nrysowanymi\nliniami</string>
    <string name="tableParam5">Całkowity czas\ntestu</string>
    <string name="tableParam6">Podobieństwo\nrysunku</string>
    <string name="tablePlaceHolder">-</string>
    <string name="compareToStats">Porownaj ze statystykami</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="logIn">Zaloguj</string>
    <string name="goToRegister">Załóż profil</string>
    <string name="enterEmail">Podaj e-mail</string>
    <string name="enterPassword">Podaj hasło</string>
    <string name="reEnterPassword">Powtórz hasło</string>
    <string name="enterLogin">Podaj login</string>
    <string name="enterName">Podaj imie</string>
    <string name="enterSurname">Podaj nazwisko</string>
    <string name="greetings">Witaj w Abtester!</string>
    <string name="register">Zarejestruj profil</string>
    <string name="logout">Wyloguj</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="email">nazwa@domena.com</string>
    <string name="chart1">Drawing speed [mm/ms]</string>
    <string name="chart2">Line average time [ms]</string>
    <string name="chart3">Space average time [ms]</string>
    <string name="chart4">Total time [ms]</string>
</resources>
