<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enterLogin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextLogin"
        app:layout_constraintTop_toTopOf="@+id/editTextLogin" />


    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:ems="9"
        android:inputType="textPersonName"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enterPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword1"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword1" />

    <EditText
        android:id="@+id/editTextPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="9"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <TextView
        android:id="@+id/textViewPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reEnterPassword"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword2"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword2" />

    <EditText
        android:id="@+id/editTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="9"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword1" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enterName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="9"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword2" />

    <TextView
        android:id="@+id/textViewSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enterSurname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextSurname"
        app:layout_constraintTop_toTopOf="@+id/editTextSurname" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="9"
        android:inputType="textPersonName"
        android:text="@string/surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/enterEmail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toTopOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="9"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="190dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:onClick="onButtonRegister"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />


    <Button
        android:id="@+id/buttonComeback"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="190dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onButtonGoToLogin"
        android:text="@string/menuReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</android.support.constraint.ConstraintLayout>